@@ -1,6 +1,6 @@
 Package: lattice
-Version: 0.12-10
-Date: 2005/10/05
+Version: 0.12-11
+Date: 2005/10/26
 Priority: recommended
 Title: Lattice Graphics
 Author: Deepayan Sarkar <deepayan.sarkar@r-project.org>
@@ -13,4 +13,4 @@ Imports: grid, grDevices, graphics, stats
 LazyLoad: yes
 LazyData: yes
 License: GPL version 2 or later
-Packaged: Mon Oct 10 16:48:32 2005; deepayan
+Packaged: Thu Oct 27 11:36:33 2005; hornik
