@@ -4,28 +4,17 @@
 \description{
   This is the default panel function for \code{bwplot}.
 }
-% \synopsis{
-% panel.bwplot(x, y, box.ratio = 1,
-%              horizontal = TRUE,
-%              pch = box.dot$pch,
-%              col = box.dot$col,
-%              cex = box.dot$cex,
-%              font = box.dot$font,
-%              fontfamily = box.dot$fontfamily,
-%              fontface = box.dot$fontface, 
-%              fill = box.rectangle$fill,
-%              varwidth = FALSE,
-%              levels.fos = if (horizontal) sort(unique(y)) else sort(unique(x)),
-%              coef = 1.5, do.out = TRUE, \dots)
-% }
 \usage{
 panel.bwplot(x, y, box.ratio = 1,
              horizontal = TRUE,
              pch, col, cex, 
              font, fontfamily, fontface, 
              fill, varwidth = FALSE,
-             levels.fos, coef = 1.5,
-             do.out = TRUE, \dots)
+             \dots,
+             levels.fos,
+             stats = boxplot.stats,
+             coef = 1.5,
+             do.out = TRUE)
 }
 \arguments{
   \item{x, y}{ numeric vector or factor. Boxplots drawn for each unique value of
@@ -45,7 +34,13 @@ panel.bwplot(x, y, box.ratio = 1,
   \item{fill}{ color to fill the boxplot}
   \item{varwidth}{ logical. If TRUE, widths of boxplots are proportional
     to the number of points used in creating it.}
-  \item{coef, do.out}{ passed to \code{\link{boxplot.stats}}}
+  \item{stats}{ a function, defaulting to \code{\link{boxplot.stats}},
+    that accepts a numeric vector and returns a list similar to the
+    return value of \code{boxplot.stats}.  The function must accept
+    arguments \code{coef} and \code{do.out} even if they do not use
+    them (a \code{\dots} argument is good enough).  This function is
+    used to determine the box and whisker plot.  }
+  \item{coef, do.out}{ passed to \code{stats}}
   \item{levels.fos}{ numeric values corresponding to positions of the
     factor or shingle variable.  For internal use. }
   \item{\dots}{
@@ -54,9 +49,10 @@ panel.bwplot(x, y, box.ratio = 1,
 }
 \details{
   Creates Box and Whisker plot of \code{x} for every level of
-  \code{y}. The actual boxplot statistics are calculated using
-  \code{boxplot.stats}. Note that most arguments controlling the display
-  can be supplied to the high-level \code{bwplot} call directly.
+  \code{y} (or the reverse if \code{horizontal=FALSE}).  By default, the
+  actual boxplot statistics are calculated using \code{boxplot.stats}.
+  Note that most arguments controlling the display can be supplied to
+  the high-level \code{bwplot} call directly.
 }
 
 \seealso{
@@ -64,19 +60,3 @@ panel.bwplot(x, y, box.ratio = 1,
 }
 \author{ Deepayan Sarkar \email{Deepayan.Sarkar@R-project.org}}
 \keyword{dplot}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
